# parallel

./: CMakeLists.txt
lab1/: CMakeLists.txt
lab1/results/: results_no_warmup.csv  results_with_warmup.csv  single_run.csv
lab1/src/: main.cpp
lab2/: CMakeLists.txt  main.cpp  matrix_utils.cpp  matrix_utils.h  multiply.cpp  multiply.h
дфи3/: main.cpp
